# thyroid_canser

./: .dockerignore  README.md  docker-compose.yml  dockerfile  main.py  pyproject.toml  requirements.txt
app/disease/: model.py  schema.py
app/segmentation/: metrix.py  model.py
models/compressed/: disease_compressed.joblib
