[project]
name = "thyroid-cancer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.1",
    "joblib>=1.5.3",
    "numpy>=2.4.3",
    "onnxruntime>=1.24.4",
    "opencv-python-headless>=4.13.0.92",
    "pandas>=3.0.1",
    "python-multipart>=0.0.22",
    "scikit-learn>=1.8.0",
    "uvicorn>=0.42.0",
]